single responsibility for controllers. services return response entities.